# revanced-releases-api

./: .gitignore  .releaserc  Dockerfile  README.md  SECURITY.md  Spheron.Dockerfile  config.toml  docker-compose.yml  dump.rdb  env.sh  main.py  mypy.ini  portainer-stack.yml  pyproject.toml  rejson.Dockerfile  release.package.js  requirements.txt  run.py  run.sh  setup.py
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/ISSUE_TEMPLATE/: others.md
.github/workflows/: build_features.yml  codeql_analysis.yml  dev.yml  features.yml  main.yml  mypy.yml  pull_requests.yml  varnish.yml
app/: dependencies.py  main.py
app/controllers/: Announcements.py  Auth.py  Clients.py  Mirrors.py  Releases.py  Socials.py
app/models/: AnnouncementModels.py  ClientModels.py  GeneralErrors.py  MirrorModels.py  ResponseFields.py  ResponseModels.py
app/routers/: announcement.py  auth.py  changelogs.py  clients.py  contributors.py  mirrors.py  patches.py  ping.py  root.py  socials.py  tools.py
app/utils/: Generators.py  HTTPXClient.py  InternalCache.py  Logger.py  RedisConnector.py
deploy/: docker-compose.yml  portainer-stack.yml
modules/: Announcements.py  Client.py  Clients.py  InternalCache.py  Releases.py  ResponseFields.py  ResponseModels.py
modules/models/: AnnouncementModel.py  AnnouncementModels.py  ClientModels.py  GeneralErrors.py  ResponseFields.py  ResponseModels.py
modules/utils/: HTTPXClient.py  InternalCache.py  Logger.py  RedisConnector.py
resources/docker/supervisord/: supervisord.conf
src/controllers/: Announcements.py  Auth.py  Clients.py  Releases.py
src/models/: AnnouncementModels.py  ClientModels.py  GeneralErrors.py  ResponseFields.py  ResponseModels.py
src/utils/: HTTPXClient.py  InternalCache.py  Logger.py  RedisConnector.py
varnish/: Dockerfile  default.vcl
