[tool.poetry]
name = "revanced-releases-api"
version = "0.1.0"
description = "JSON API for ReVanced Releases"
authors = ["Alexandre Teles <alexandre.teles@ufba.br>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.85.0"
httpx = {version = ">=0.23.0", extras = ["http2"]}
httpx-cache = ">=0.6.0"
toml = ">=0.10.2"
slowapi = ">=0.1.6"
orjson = ">=3.8.0"
fastapi-cache2 = ">=0.1.9"
redis = ">=4.3.4"
loguru = ">=0.6.0"
sentry-sdk = ">=1.9.8"
argon2-cffi = ">=21.3.0"
hypercorn = {extras = ["uvloop"], version = ">=0.14.3"}
cytoolz = ">=0.12.0"

[tool.poetry.dev-dependencies]
fastapi = ">=0.85.0"
httpx = {version = ">=0.23.0", extras = ["http2"]}
httpx-cache = ">=0.6.0"
toml = ">=0.10.2"
slowapi = ">=0.1.6"
orjson = ">=3.8.0"
fastapi-cache2 = ">=0.1.9"
redis = ">=4.3.4"
mypy = ">=0.971"
types-toml = ">=0.10.8"
loguru = ">=0.6.0"
sentry-sdk = ">=1.9.8"
argon2-cffi = ">=21.3.0"
hypercorn = {extras = ["uvloop"], version = ">=0.14.3"}
cytoolz = ">=0.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
